@@ -6,6 +6,10 @@ qemu (1.01+dfsg-1) UNRELEASED; urgency=low
     - remove debian/patches/qemu-ifunc-ppc.patch
     - remove debian/patches/x86-fix-cmpxchg.patch
 
+  [ Michael Tokarev ]
+  * apply patch to change backticks `` in debian/rules variables
+    to $(shell) construct, by Allard Hoeve.  (Closes: #660133)
+
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Feb 2012 20:18:45 +0100
 
 qemu (1.0+dfsg-3) unstable; urgency=low
